# maintainer-copilot

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Checklist.md  INSTRUCTOR_NOTEBOOK_MAPPING.md  README.md  docker-compose.yml
.claude/: settings.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  eval-classification.yml  eval-rag.yml
backend/: Dockerfile  benchmark_results.json  benchmark_retrieval_results.json  eval_thresholds.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 283526252229_baseline_tables_users_conversations_.py  7e637234595f_memory_long_add_memory_type.py  a1b2c3d4e5f6_rag_chunks_fix_memory_long_dim.py  b3e9f1a2c4d5_widgets_add_owner_theme_greeting_tools.py  fc629b51e563_auth_add_fastapi_users_columns_to_users.py
backend/app/: main.py  modelserver.py
backend/app/api/: auth.py  chat.py  cors.py  memory.py  middleware.py  widgets.py
backend/app/chatbot/: loop.py  tools.py
backend/app/core/: config.py  lifespan.py  logging.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  audit_log.py  conversations.py  memory_long.py  messages.py  rag_chunks.py  users.py  widgets.py
backend/app/domain/: exceptions.py  memory.py  schemas.py
backend/app/entrypoints/: bootstrap_admin.py
backend/app/infra/: auth.py  object_storage.py  redaction.py  tracing.py  vault.py
backend/app/memory/: long_term.py  short_term.py
backend/app/prompts/: system.md
backend/app/rag/: __init__.py  bm25_index.py  chunker.py  embedder.py  hybrid_retriever.py  pipeline.py  query_transform.py  reranker.py  retriever.py
backend/app/repositories/: widgets.py
backend/app/services/: chat_service.py
backend/app/static/: index.html  widget.js
backend/notebooks/: 01_train_classifier.ipynb  02_classical_baseline.ipynb  03_llm_baseline.ipynb
backend/notebooks/wandb/: latest-run
backend/notebooks/wandb/run-20260519_163958-4krpz3wt/: run-4krpz3wt.wandb
backend/notebooks/wandb/run-20260519_163958-4krpz3wt/files/: config.yaml  requirements.txt  wandb-metadata.json
backend/notebooks/wandb/run-20260519_165005-q61gnmyq/: run-q61gnmyq.wandb
backend/notebooks/wandb/run-20260519_165005-q61gnmyq/files/: config.yaml  wandb-metadata.json  wandb-summary.json
backend/notebooks/wandb/run-20260519_170704-6xo8ziaa/: run-6xo8ziaa.wandb
backend/notebooks/wandb/run-20260519_170704-6xo8ziaa/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
backend/notebooks/wandb/run-20260519_182825-6vaoq2zd/: run-6vaoq2zd.wandb
backend/notebooks/wandb/run-20260519_182825-6vaoq2zd/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
backend/scripts/: benchmark_embeddings.py  benchmark_retrieval.py  bootstrap_widget.py  build_dataset.py  build_rag_corpus.py  curate_golden_set.py  curate_rag_golden_set.py  demo_memory_recall.py  fetch_issue_comments.py  fetch_issues.py  fetch_issues_graphql.py  index_corpus.py  judge_agreement.py  postgres-init.sh  push_classifier_to_minio.py  vault-init.sh
backend/tests/: test_auth.py  test_chat_endpoint.py  test_chatbot_loop.py  test_chatbot_tools.py  test_chunker.py  test_classical_baseline.py  test_classifier_inference.py  test_cors.py  test_dataset_splits.py  test_eval_classification.py  test_eval_rag.py  test_eval_thresholds_refuse_to_boot.py  test_healthz.py  test_llm_baseline.py  test_logging.py  test_long_term_memory.py  test_memory_endpoint.py  test_memory_recall.py  test_ner_endpoint.py  test_redaction.py  test_refuse_to_boot.py  test_refuse_to_boot_langfuse.py  test_short_term_memory.py  test_static_files.py  test_summarize_endpoint.py  test_vault.py  test_widget_auth.py  test_widgets_api.py
deliverables/: ARCH.md  DECISIONS.md  EVALS.md  LICENSES.md  RUNBOOK.md  SECURITY.md
demo/blocked/: blocked.html
demo/host/: nginx.conf
demo/host/public/: index.html
frontend-admin/: Dockerfile  app.py  pyproject.toml
frontend-admin/pages/: chat.py  memory.py  widget_config.py
frontend-admin/tests/: test_api_client.py
frontend-admin/utils/: api_client.py  auth_guard.py
frontend-widget/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend-widget/public/: widget.js
frontend-widget/src/: ChatPanel.jsx  Message.jsx  Widget.jsx  api.js  main.jsx  styles.css  useSSEChat.js
frontend-widget/src/__tests__/: Widget.test.jsx  api.test.js  useSSEChat.test.js
