[project]
name = "maintainer-copilot-backend"
version = "0.1.0"
description = "Maintainer's Copilot — FastAPI backend (api + modelserver)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "hvac>=2.3.0",                          # Vault client
    "sqlalchemy[asyncio]>=2.0.36",          # ORM
    "asyncpg>=0.30.0",                      # Async PostgreSQL driver
    "alembic>=1.14.0",                      # Migrations
    "psycopg2-binary>=2.9.10",              # Sync driver — Alembic prefers this for migrations
    "pgvector>=0.3.6",                      # pgvector type bindings
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "types-hvac>=2.4.0.20260518",
]

# ─── ruff ──────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import ordering)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501", # line-too-long (ruff format handles this)
    "B008", # function-call-in-default (FastAPI's Depends pattern needs this)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802"]  # allow non-snake_case in test names

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── mypy ──────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pgvector.*"]
ignore_missing_imports = true

# ─── pytest ────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
