[project]
name = "maintainer-copilot-backend"
version = "0.1.0"
description = "Maintainer's Copilot — FastAPI backend (api + modelserver)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "hvac>=2.3.0",                          # Vault client
    "sqlalchemy[asyncio]>=2.0.36",          # ORM
    "asyncpg>=0.30.0",                      # Async PostgreSQL driver
    "alembic>=1.14.0",                      # Migrations
    "psycopg2-binary>=2.9.10",              # Sync driver — Alembic prefers this for migrations
    "pgvector>=0.3.6",                      # pgvector type bindings
    "langfuse>=2.50.0,<3.0.0",
    # ─── ML / training stack ──────────────────────────────────────
    "torch>=2.4.0",
    "transformers>=4.46.0",
    "accelerate>=1.1.0",
    "datasets>=3.1.0",
    "evaluate>=0.4.3",
    "scikit-learn>=1.5.0",
    "wandb>=0.18.0",
    # ─── Object storage client (for modelserver to fetch artifacts) ──
    "minio>=7.2.0",
    "anthropic>=0.40.0",
    "tenacity>=9.0.0",
    "pyyaml>=6.0.0",
    "sentence-transformers>=3.0.0",
    "GitPython>=3.1.40",
    "rank-bm25>=0.2.2",
    "fastapi-users[sqlalchemy]>=13.0.0,<14.0.0",
    "bcrypt>=4.0.0",                           # password hashing backend for fastapi-users
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "types-hvac>=2.4.0.20260518",
    "tqdm>=4.66.0",
    "nbformat>=5.10.0",
    "ipykernel>=7.0.0",
    "types-PyYAML>=6.0.0",
    "types-passlib>=1.7.7",
]

# ─── ruff ──────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import ordering)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501", # line-too-long (ruff format handles this)
    "B008", # function-call-in-default (FastAPI's Depends pattern needs this)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802"]  # allow non-snake_case in test names

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── mypy ──────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pgvector.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
  module = ["langfuse.*"]
  ignore_missing_imports = true

[[tool.mypy.overrides]]
  module = ["minio.*"]
  ignore_missing_imports = true

[[tool.mypy.overrides]]
  module = ["psycopg2.*"]
  ignore_missing_imports = true

[[tool.mypy.overrides]]
  module = ["rank_bm25"]
  ignore_missing_imports = true

# ─── pytest ────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

markers = [
    "eval: requires ANTHROPIC_API_KEY, runs Haiku against committed golden set thresholds",
]
